css/styles.css
body{
    font-family: 'Roboto', sans-serif;
}
h1{
    text-align: center;
    margin-top: 8px;
}
h2 {
    font-size: 26px;
}
h3{
    font-size: 22px;
}
p{
    font-size: 14px;
}
br{
    line-height: 30px;
}
h1 img{
    height: 50px;
}
a{
    text-decoration: underline;
}
sup{
    color: #0591cc;
    padding: 0px 2px;
}
select{
    display: inline-block;
    height: 34px;
    outline: none;
    color: #555;
    border: 1px solid #0097dc;
    border-radius: 4px;
    background: #fff;
    font-style: italic;
    text-indent: 6px;
}
footer{
    background-color: #3b3b3d;
    color: white;
    padding-top: 10px;
}
strong{
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 1.1em;
}
.no-display{
    display: none !important;
}
.tick{
    background-image: url(../assets/tick-icon.png);
    background-repeat: no-repeat;
    background-size: 15px;
    background-position: 99% center;
}
select.tick{
    background-position: calc(100% - 10px) center;
}
.footer-margin-top{
    margin-top: 40px;
}
h2.inner-pages{
    margin-top: 40px;
    margin-bottom: 25px;
}
.blue{
    color: #0591cc;
}
.normal-lineheight{
    line-height: inherit;
}
.banner-img{
    background-image: url("../assets/banner-webID.jpg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    height: 360px;
}
.change-lang{
    margin-top: 10px;
    margin-bottom: 20px;
}
.flags{
    height: 20px;
}
.intro h2{
    margin-top: 0px;
    color: #0591cc;
    letter-spacing: .5px;
}
.intro h3{
    margin-top: 0px;
}
.intro p{
    margin-top: 25px;
}
.contract-process{
    margin-bottom: 25px;
}
.sign-contract{
    text-decoration: none;
}
.sign-contract-p{
    margin-bottom: 25px;
    line-height: 30px;
}
.process h2{
    margin-top: 30px;
    margin-bottom: 20px;
    color: #0591cc;
    letter-spacing: .5px;
}
.process-list{
    margin-left: 0px;
    padding: 0px;
}
.process-list li {
    padding: 10px 9%;
    text-align: center;
}
.process-list p{
    margin-top: 15px;
    margin-bottom: 20px;
}
.thank-you{
    text-align: center;
    margin-top: 0px;
    margin-bottom: 30px;
}
#user-form{
    background-color: #ebebeb;
    padding: 20px 15px 4px 15px;
    margin-left: -15px;
    margin-right: -15px;
    margin-bottom: 20px;
}
#user-form input{
    font-style: italic;
    border-color: #0591cc;
    padding-right: 20px;
}
#user-form .form-group .error-feedback{
    display: block;
    margin-left: 16px;
    font-size: 12px;
    margin-top: 4px;
    color: red;
    margin-bottom: -2px;
}
#user-form .form-group .error-code-feedback{
    display: block;
    font-size: 12px;
    margin-top: 4px;
    color: red;
    margin-bottom: -2px;
}
#inputTitle{
    width: 100px;
}
#user-form .dob-input{
    float: left;
    width: 25%;
    max-width: 73px;
    margin-right: 15px;
}
#inputNationality, #inputCountry{
    width: 100%;
}
#inputStreet{
    width: 59%;
    float: left;
}
#inputStrtNo{
    width: 21%;
    float: left;
}
.form-horizontal .control-label {
    text-align: left;
    padding-left: 20px;
    font-weight: normal;
}
#user-form .col-sm-3.control-label.str-no{
    width: 20%;
    float: left;
    margin-top: 6px;
    text-align: right;
}
#inputPostal{
    width: 100%;
    float: left;
}
#inputCity{
    width: 100%;
    float: left;
}
#user-form .col-sm-3.control-label.city{
    width: 100%;
    float: left;
    margin-top: 15px;
    text-align: left;
    padding-left: 5px;
}
.form-group.data-check{
    display: none;
}
#privacyCheck, #dataCheck{
    margin-left: 0px;
    display: none;
}
#privacyCheck + label, #dataCheck + label{
    padding-left: 40px;
    font-size: 12px;
}
.input-holder.data-check{
    background-color: #c8ffd0;
    padding-bottom: 6px;
    border: 1px solid #a5daac;
}
.input-holder.data-check label{
    min-height: 29px;
}
input#privacyCheck[type="checkbox"] + label:before,
input#dataCheck[type="checkbox"] + label:before{
    border: 1px solid #0097dc;
    content: "";
    display: inline-block;
    height: 25px;
    padding: 0;
    vertical-align: top;
    width: 25px;
    position: absolute;
    top: 10px;
    left: 0px;
    background-color: white;
}
input#privacyCheck[type="checkbox"]:checked + label:after,
input#dataCheck[type="checkbox"]:checked + label:after{
    content: "";
    display: inline-block;
    height: 11px;
    padding: 0;
    vertical-align: top;
    width: 11px;
    position: absolute;
    top: 17px;
    left: 7px;
    background-color: #0097dc;
}
.submit-form{
    background-color: #0097dc;
    color: white;
    border: 1px solid #0475a9;
    letter-spacing: 0.8px;
    padding-left: 30px;
    padding-right: 30px;
}
.submit-form span{
    font-size: 9px;
    color: white;
    display: inline-block;
    float: left;
    margin-top: 4px;
    margin-right: 6px;
}
.glyphicon{
    color: #0097dc;
    font-size: 26px;
}
.glyphicon-arrow-right{
    position: absolute;
    top: 56px;
    left: 80%;
}
.video-help{
    margin-bottom: 20px;
}
.video-help img{
    padding: 0px;
}
.video-help p{
    padding-right: 0px;
}
.require{
    background-color: #ebebeb;
    border-radius: 4px;
}
.require h3{
    margin-top: 0px;
    padding-top: 20px;
    padding-left: 40px;
}
.require-list h4{
    background-color: #f7f7f7;
    padding: 10px 0px;
    color: #0591cc;
    margin-bottom: 15px;
}
.require-list .single-list{
    background-color: #f7f7f7;
    display: table;
    width: 100%;
    padding: 0px;
    color: #0591cc;
    margin-bottom: 15px;
}
.single-list .list-number{
    display: table-cell;
    background-color: #0097dc;
    width: 40px;
    color: white;
    text-align: center;
}
.single-list .img-holder{
    display: block;
    padding: 10px 20px;
    text-align: center;
}
.single-list .require-process {
    padding: 0px;
    display: block;
    text-align: center;
    padding: 10px 10px 20px;
}
.require-list .require-text{
    font-size: 18px;
}
/* ... */

